<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
            android:defaultValue="@string/pref_nio_value" 
            android:title="@string/pref_nio_title"
            android:key="@string/pref_nio_key"/>

    <EditTextPreference 
            android:defaultValue="@string/pref_port_value"
            android:dialogTitle="@string/pref_port"
            android:title="@string/pref_port_title"
            android:key="@string/pref_port_key"/>

    <EditTextPreference 
            android:dialogTitle="@string/pref_console_pwd"
            android:title="@string/pref_console_pwd_title"
            android:defaultValue="@string/pref_console_pwd_value"
            android:key="@string/pref_console_pwd_key"/>

</PreferenceScreen>

